--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.2.6",
     "husky": "^7.0.1",
-    "jest": "^27.0.6",
+    "jest": "^25.5.4",
     "lint-staged": "^11.0.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
